edit: Removed hat from flow after a change of basis, to clarify that the same flow group action is being used

--- a/condensedNotes/LaTeX/DifferentialEquations.tex
+++ b/condensedNotes/LaTeX/DifferentialEquations.tex
@@ -277,12 +277,12 @@ Hence, we can raise e to the power of a matrix by defining $e^{tA}$ as the matri
     
     \item Then consider the substitution $\mathbf{x}(t) = P^{-1} \mathbf{y}(t)$:
 
-    \[P^{-1}y(t) = e^{tA}P^{-1} y_0 \implies y(t) = Pe^{tA}P^{-1} y_0 \implies \hat{\varphi}(t, y_0) = y(t) = e^{tJ}y_0\]
+    \[P^{-1}y(t) = e^{tA}P^{-1} y_0 \implies y(t) = Pe^{tA}P^{-1} y_0 \implies {\varphi}(t, y_0) = y(t) = e^{tJ}y_0\]
 
     Where vector $y$ is the same as $x$ but with respect to the Jordan Basis.
 
     \item A special case of this when $A$ is diagonalisable with distinct eigenvalues $\lambda_i$ and eigenvectors $v_i$:
-    \[x(t) = \hat{\varphi}(t, x_0) = c_1e^{\lambda_1 t} + c_2e^{\lambda_2 t} + ... + c_ie^{\lambda_i t} \text{ where $x_0 = c_1v_1 + c_2v_2 + ... + c_iv_i$}\]
+    \[x(t) = {\varphi}(t, x_0) = c_1e^{\lambda_1 t} + c_2e^{\lambda_2 t} + ... + c_ie^{\lambda_i t} \text{ where $x_0 = c_1v_1 + c_2v_2 + ... + c_iv_i$}\]
     We rewrite a point on the phase plane in terms of the eigenvector basis and we can see the flow component for each of these eigen vectors.
     
 \end{itemize}
